tests/ui/lint/snapshots/unused_mut.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused `mut`
   ╭─[test.lis:3:11]
 2 │ fn main() {
 3 │   let mut x = 5;
   ·           ┬
   ·           ╰── declared as mutable
 4 │   x
   ╰────
  help: Remove `mut` from the declaration if you do not need to mutate the variable · code: [lint.unnecessary_mut]
