tests/ui/lint/snapshots/unused_option.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ `Option` is silently discarded
   ╭─[test.lis:7:3]
 6 │ fn main() {
 7 │   get_option();
   ·   ──────┬─────
   ·         ╰── absence will go unnoticed
 8 │   ()
   ╰────
  help: Handle this `Option` with `?` or `match`, or explicitly discard it with `let _ = ...` · code: [lint.unused_option]
