tests/ui/lint/snapshots/unused_option_in_tail_position.snap
---
source: tests/ui/lint/mod.rs
---
  [error] Mismatch between return type and return value
   ╭─[test.lis:7:3]
 5 │ 
 6 │ fn do_search() {
   ·                ┬
   ·                ╰── has `()` as implicit return type
 7 │   find_item()
   ·   ─────┬─────
   ·        ╰── returns `Option<int>`
 8 │ }
   ╰────
  help: If the `()` return type is intended, discard the return value with `let _ = ...`. If the `Option<int>` return value is intended, add `-> Option<int>` to the function signature · code: [lint.unused_option]
