tests/ui/lint/snapshots/unused_param.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused parameter
   ╭─[test.lis:2:12]
 1 │ 
 2 │ pub fn foo(x: int) -> int {
   ·            ┬
   ·            ╰── never used
 3 │   42
   ╰────
  help: Use this parameter or prefix it with an underscore: `_x` · code: [lint.unused_param]
