tests/ui/lint/snapshots/unused_partial_in_tail_position.snap
---
source: tests/ui/lint/mod.rs
---
  [error] Mismatch between return type and return value
   ╭─[test.lis:7:3]
 5 │ 
 6 │ fn main() {
   ·           ┬
   ·           ╰── has `()` as implicit return type
 7 │   get_partial()
   ·   ──────┬──────
   ·         ╰── returns `Partial<int, string>`
 8 │ }
   ╰────
  help: If the `()` return type is intended, discard the return value with `let _ = ...`. If the `Partial<int, string>` return value is intended, add `-> Partial<int, string>` to the function signature · code: [lint.unused_partial]
