tests/ui/lint/snapshots/unused_result_in_if_let_branch.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] `Result` is silently discarded
    ╭─[test.lis:9:5]
  8 │   if let Some(_) = opt {
  9 │     get_result()
    ·     ──────┬─────
    ·           ╰── failure will go unnoticed
 10 │   } else {
    ╰────
  help: Handle this `Result` with `?` or `match`, or explicitly discard it with `let _ = ...` · code: [lint.unused_result]
